--- a/changelog.txt
+++ b/changelog.txt
@@ -12,12 +12,24 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
+Version 2.6.4.4 [2020-11-08] GPo
+--------------------------
+** If there are any problems, it's a test version, if not, it's a regular one ;)
+* New menu Video > Zoom > 'Antialiasing', draws the preview antialiased (bilinear) if the zoom is not equal to 100%
+-- drawing requires more power, I have done a lot that the preview does not jerk with mouse movements or playback. 
+-- but when the scroll bars are moved manually you can feel the difference.
+-- It will be temporarily deactivated during playback or if crop editor shown and on some other events. 
+-- check it out, I don't know if it works on all systems without errors. 
+-- And I don't know yet whether it will be kept. It took a lot of effort to implement it and if it causes bigger problems then I throw it out.
+* New Options > Video > 'Startup with last zoom settings'
+* Small other (fixes) changes
+
+--------------------------
 Version 2.6.4.3 [2020-11-01] GPo
 --------------------------
 * 'New tab from snapshot' now sets the current frame number (if possible)
 * Get pixel info from avisynth now disabled if snapshot visible
 * Fixed 'Copy to new tab' not copying the tab bookmarks
-
 
 --------------------------
 Version 2.6.4.2 [2020-10-31] GPo
