--- a/changelog.txt
+++ b/changelog.txt
@@ -12,15 +12,35 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
-Version 2.6.5.2 [2020-12-12] GPo
+Version 2.6.5.3 [2020-12-23] GPo
 --------------------------
-* Added context menu to play button (right click)
+* Options > Misc > 'Use large video controls' replaced by options > Misc 2 > 'DPI scaling video controls'
+* Changed some functions for DPI awareness
+*** Important*** The Guis in the Tools folder need to be updated.
+-- avs2avi_gui.py, encoder_gui.py, resize_calc.py
+-- To do this, the files must be overwritten and all .pyo files in the 'tools' dirctory deleted.
+-- Or unzip AvsPmod in a new directory and copy the options.dat from the old to the new directory. 
+-- Then copy the .dat files from the 'tools' directory to the new 'tools' directory. So that the settings of the Guis are retained.
+*Mary Christmas*
+
+--------------------------
+Version 2.6.5.2 [2020-12-20] GPo
+--------------------------
+* Added context menu to the 'play' button (right click)
 * Removed Play video > 'Drop frames'
 -- 'Drop frames' now in the play button context menu
 -- 'Auto' is the old one (video frame rate related)
 -- manually (2 - 16) is nice for fast playback (without filters), I get 1800 fps on maximum speed (but that's not real fps) ;)
 * Again tab bookmarks handling slightly revised. And that's not the end.
 * Synchronisation between 'menu bar' and 'context menu' items 'is item checked' improved.
+* Beta: High DPI Awareness
+-- added to menu Help 'DPI info'
+-- Options > Misc 2 > 'AvsPmod DPI scaling'
+-- set 'DPI scaling overall' to value 5 for 150 % scaling 
+-- play with the other values
+-- It's beta, so some elements may be not scaled 
+-- leave 'Use manual DPI scaling' checked (recommended)
+-- you can also use the scaling without a high resolution monitor.
 
 --------------------------
 Version 2.6.5.1 [2020-12-06] GPo
