--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,13 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
+Version 2.6.6.2 [2021-01-16] GPo
+--------------------------
+* Automatic calculation of the DPI factor changed. (I can't test it and I hope it works)
+* Fix for tab change with separate video window
+* Bugfix step frame buttons
+
+--------------------------
 Version 2.6.6.1 [2021-01-10] GPo
 --------------------------
 * Preview filters revised
