--- a/changelog.txt
+++ b/changelog.txt
@@ -27,6 +27,12 @@ Use program options > Save/Load > 'Backup session when previewing' and the acces
 #####
 
 --------------------------
+Version 2.6.8.0 [2021-05-24] GPo
+--------------------------
+* Bugfix and update: display YUV > RGB conversion showed wrong values. 
+- the matrix actually read is displayed in brackets behind the matrix currently in use. 
+
+--------------------------
 Version 2.6.7.9 [2021-05-23] GPo
 --------------------------
 * Split View can now show the Snapshots
