--- a/changelog.txt
+++ b/changelog.txt
@@ -11,13 +11,12 @@ pinterf source: https://github.com/pinterf/AvsPmod
 GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
-#####
+##### 
+About sliders:
  The sliders are a fine thing, but you should also use them with the right feeling.
  Use the filter exclusion list for the sliders. The creation of the sliders is time and resource consuming, minimize this effort to what is necessary. 
  source filters, trim, crop, addborders, prefetch, etc. can also be set wonderfully in the script.
  And there is still the possibility to switch the list on and off in the slider window if you want to see all of them.
-#####
-
 #####
 About accessing Avisnth in threads:
 Even with threads it is easy to crash AvsPmod, the avisynth.dll is coupled with the main thread, 
@@ -25,6 +24,30 @@ if an error is triggered by a plugin and the plugin or avisynth crashes, AvsPmod
 The threads only helps if avisynth does not return.
 Use program options > Save/Load > 'Backup session when previewing' and the accesses in threads to minimize the risk of losing the script.
 #####
+How do I sync videos with groups:
+If a group was previously selected, delete that group first. Make sure 'Add tab to group' > 'Apply offsets' is checked
+Go to the desired position with each video (tab), then select the same group for each video ('Add tab to group'). 
+Now all videos should be frame accurately synchronized.
+#####
+
+--------------------------
+Version 2.6.8.4 [2021-06-17] GPo
+--------------------------
+* SplitView now also recognizes group offsets ( nice for compare two same videos with different start offsets )
+* Timeline range can be moved with 'hard coded shortcuts'
+- Ctrl + Alt + Left or Right ( moves 10% steps in the limited range )
+- Ctrl + Alt + PageUp or PageDown ( moves the complette range ), then slider position does not match the picture.
+- the now displayed frame number can be updated with the 'Enter' or 'Return' or a frame step, if you have not updated and 
+- you hold down Ctrl while hitting 'Enter' or 'Return' the timeline moves back to the current frame number
+- there is one setting under program options > Video > 'Move video slider to timeline start', read the tooltip 
+* Update macro PreviewEncode.py
+* Fixed: if a resize filter was set with a 'Preview Filter' during playback, an error message could appear.  
+* Fixed: the context menu of the text editor could crash under certain conditions 
+-
+How do I sync videos with groups:
+If a group was previously selected, delete that group first. Make sure 'Add tab to group' > 'Apply offsets' is checked
+Go to the desired position with each video (tab), then select the same group for each video ('Add tab to group'). 
+Now all videos should be frame accurately synchronized. 
 
 --------------------------
 Version 2.6.8.3 [2021-06-11] GPo
