--- a/changelog.txt
+++ b/changelog.txt
@@ -40,7 +40,7 @@ Version 2.6.8.4 [2021-06-17] GPo
 - the now displayed frame number can be updated with the 'Enter' or 'Return' or a frame step, if you have not updated and 
 - you hold down Ctrl while hitting 'Enter' or 'Return' the timeline moves back to the current frame number
 - there is one setting under program options > Video > 'Move video slider to timeline start', read the tooltip 
-* Update macro PreviewEncode.py
+* Update macro PreviewEncode.py and DeleteEncodings.py
 * Fixed: if a resize filter was set with a 'Preview Filter' during playback, an error message could appear.  
 * Fixed: the context menu of the text editor could crash under certain conditions 
 -
